_sass/_layout.scss
/**
 * Site header
 */
.site-header {
    background-color: $text-background;
    margin-top: 1em;
}

.site-title {
    line-height: 56px;
    margin-bottom: 0;
    float: left;
    color: $title-color;
    padding-left: $text-padding;

    &,
    &:visited {
        color: $title-color;
    }
}

.site-nav {
    float: right;
    line-height: 56px;

    .menu-icon {
        display: none;
    }

    .page-link {
        font-size: $base-font-size;
        color: $title-color;
        line-height: $base-line-height;
        padding-right: $text-padding;
        &,
        &:visited {
            color: $title-color;
        }

        // Gaps between nav items, but not on the last one
        &:not(:last-child) {
            margin-right: 20px;
        }
    }

}

@include media-query($on-laptop) {
    .footer-col-1,
    .footer-col-2 {
        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
        width:         calc(50% - (#{$spacing-unit} / 2));
    }

    .footer-col-3 {
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}

@include media-query($on-palm) {
    .footer-col {
        float: none;
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}

/**
 * Page content
 */
.page-content {
    padding: $spacing-unit 0;
}

.page-heading {
}

.post-list {
    margin: 0;
    list-style: none;
    background-color: $text-background;
    padding: $text-padding;
}

.post-group {
    display: inline;
}

.post-list-meta {
    color: $grey-color;
    float: right;
}

.post-meta {
    color: $grey-color;
    padding-left: $text-padding;
    font-size: $base-font-size * 0.9;
    font-family: $base-font-family;
    margin-bottom: 5px;
}

/**
 * Posts
 */
.post-header {
    margin-bottom: 17px;
    font-family: $header-font-family;
    display: block;
    position: relative;
}

.post-title {
    line-height: 1;
    color: $title-color;
    font-size: $header-font-size;
    padding: $text-padding;
}

.post-content {
    margin-bottom: $spacing-unit;
    background-color: $text-background;
    padding: $text-padding;
    h1 {
        font-family: $header-font-family;
        color: $title-color;
        font-size: $big-font-size;
        font-weight: bold;

        @include media-query($on-laptop) {
            font-size: 28px;
        }
    }

    h2 {
        font-family: $header-font-family;
        color: $title-color;
        font-size: $medium-font-size;

        @include media-query($on-laptop) {
            font-size: $medium-font-size;
        }
    }

    h3 {
        color: $title-color;
        @include media-query($on-laptop) {
            font-size: 22px;
        }
    }

    h4 {
        color: $title-color;
        @include media-query($on-laptop) {
            font-size: 18px;
        }
    }
}

table {
    border-spacing: 15px;
}

table, th, td {
    padding: 5px;
}

html {
    overflow-y: scroll;
}

figure {
    margin-top: 35px;
    margin-bottom: 25px;
    padding-left: 50px;
    padding-right: 50px;
}

figcaption {
    margin-top: 8px;
    text-align: center;
    font-style: italic;
    color: $grey-color-dark;
}

/**
 * Initialiazing a `footnotes` counter on the wrapper
 */
article {
  counter-reset: footnotes;
}

a[aria-describedby="footnote-label"] {
  counter-increment: footnotes;
  text-decoration: none;
  color: inherit;
  cursor: default;
  outline: none;
}

a[aria-describedby="footnote-label"]::after {
  content: counter(footnotes);
  font-size: 0.5em;
  margin-left: 2px;
  color: black;
  text-decoration: underline;
  cursor: pointer;
}

a[aria-describedby="footnote-label"]:focus::after {
  outline: thin dotted;
  outline-offset: 2px;
}

footer :target {
  background: pink;
}

footer {
  border-top: 1px solid $grey-color-light;
  margin-top: 50px;
  padding-top: 10px;
  padding-left: 10px;
}

.skip-link {
  position: absolute;
  top: -40px;
  left: 0;
  background: #000000;
  color: white;
  padding: 8px;
  z-index: 100;
}

.skip-link:focus {
  top: 0;
}

